tools/find-mac/build/log/idf_py_stdout_output_53307
[1/9] Performing build step for 'bootloader'
[1/1] cd /Users/jowallace/Dev/CloudMAV/tools/find-mac/build/bootloader/esp-idf/esptool_py && /Users/jowallace/.espressif/python_env/idf5.4_py3.13_env/bin/python /Users/jowallace/esp/v5.4/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /Users/jowallace/Dev/CloudMAV/tools/find-mac/build/bootloader/bootloader.bin
Bootloader binary size 0x5210 bytes. 0x2df0 bytes (36%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/Users/jowallace/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.4-1-g6b7b8ea3d2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/jowallace/Dev/CloudMAV/tools/find-mac/build/config -I/Users/jowallace/Dev/CloudMAV/tools/find-mac/main -I/Users/jowallace/esp/v5.4/esp-idf/components/newlib/platform_include -I/Users/jowallace/esp/v5.4/esp-idf/components/freertos/config/include -I/Users/jowallace/esp/v5.4/esp-idf/components/freertos/config/include/freertos -I/Users/jowallace/esp/v5.4/esp-idf/components/freertos/config/xtensa/include -I/Users/jowallace/esp/v5.4/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/jowallace/esp/v5.4/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/jowallace/esp/v5.4/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/jowallace/esp/v5.4/esp-idf/components/freertos/esp_additions/include -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_hw_support/include -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_hw_support/include/soc -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_hw_support/dma/include -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_hw_support/ldo/include -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_hw_support/debug_probe/include -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_hw_support/port/esp32s3/. -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_hw_support/port/esp32s3/include -I/Users/jowallace/esp/v5.4/esp-idf/components/heap/include -I/Users/jowallace/esp/v5.4/esp-idf/components/heap/tlsf -I/Users/jowallace/esp/v5.4/esp-idf/components/log/include -I/Users/jowallace/esp/v5.4/esp-idf/components/soc/include -I/Users/jowallace/esp/v5.4/esp-idf/components/soc/esp32s3 -I/Users/jowallace/esp/v5.4/esp-idf/components/soc/esp32s3/include -I/Users/jowallace/esp/v5.4/esp-idf/components/soc/esp32s3/register -I/Users/jowallace/esp/v5.4/esp-idf/components/hal/platform_port/include -I/Users/jowallace/esp/v5.4/esp-idf/components/hal/esp32s3/include -I/Users/jowallace/esp/v5.4/esp-idf/components/hal/include -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_rom/include -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_rom/esp32s3/include -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_rom/esp32s3 -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_common/include -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_system/include -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_system/port/soc -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_system/port/include/private -I/Users/jowallace/esp/v5.4/esp-idf/components/xtensa/esp32s3/include -I/Users/jowallace/esp/v5.4/esp-idf/components/xtensa/include -I/Users/jowallace/esp/v5.4/esp-idf/components/xtensa/deprecated_include -I/Users/jowallace/esp/v5.4/esp-idf/components/lwip/include -I/Users/jowallace/esp/v5.4/esp-idf/components/lwip/include/apps -I/Users/jowallace/esp/v5.4/esp-idf/components/lwip/include/apps/sntp -I/Users/jowallace/esp/v5.4/esp-idf/components/lwip/lwip/src/include -I/Users/jowallace/esp/v5.4/esp-idf/components/lwip/port/include -I/Users/jowallace/esp/v5.4/esp-idf/components/lwip/port/freertos/include -I/Users/jowallace/esp/v5.4/esp-idf/components/lwip/port/esp32xx/include -I/Users/jowallace/esp/v5.4/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/jowallace/esp/v5.4/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_wifi/include -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_wifi/include/local -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_wifi/wifi_apps/include -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_event/include -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_phy/include -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_phy/esp32s3/include -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_netif/include -I/Users/jowallace/esp/v5.4/esp-idf/components/nvs_flash/include -I/Users/jowallace/esp/v5.4/esp-idf/components/esp_partition/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/jowallace/Dev/CloudMAV/tools/find-mac=. -fmacro-prefix-map=/Users/jowallace/esp/v5.4/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /Users/jowallace/Dev/CloudMAV/tools/find-mac/main/main.c
/Users/jowallace/Dev/CloudMAV/tools/find-mac/main/main.c: In function 'wifi_init_sta':
/Users/jowallace/Dev/CloudMAV/tools/find-mac/main/main.c:16:5: error: 's_wifi_event_group' undeclared (first use in this function)
   16 |     s_wifi_event_group = xEventGroupCreate();
      |     ^~~~~~~~~~~~~~~~~~
/Users/jowallace/Dev/CloudMAV/tools/find-mac/main/main.c:16:5: note: each undeclared identifier is reported only once for each function it appears in
In file included from /Users/jowallace/esp/v5.4/esp-idf/components/esp_hw_support/include/esp_intr_alloc.h:12,
                 from /Users/jowallace/esp/v5.4/esp-idf/components/esp_hw_support/include/esp_cpu.h:20,
                 from /Users/jowallace/esp/v5.4/esp-idf/components/esp_hw_support/include/spinlock.h:11,
                 from /Users/jowallace/esp/v5.4/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos/portmacro.h:49,
                 from /Users/jowallace/esp/v5.4/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/portable.h:57,
                 from /Users/jowallace/esp/v5.4/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/FreeRTOS.h:69,
                 from /Users/jowallace/Dev/CloudMAV/tools/find-mac/main/main.c:2:
/Users/jowallace/Dev/CloudMAV/tools/find-mac/main/main.c:30:58: error: 'event_handler' undeclared (first use in this function); did you mean 'xt_handler'?
   30 |                                                         &event_handler,
      |                                                          ^~~~~~~~~~~~~
/Users/jowallace/esp/v5.4/esp-idf/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
/Users/jowallace/Dev/CloudMAV/tools/find-mac/main/main.c:41:21: error: 'EXAMPLE_ESP_WIFI_SSID' undeclared (first use in this function); did you mean 'ESP_ERR_WIFI_SSID'?
   41 |             .ssid = EXAMPLE_ESP_WIFI_SSID,
      |                     ^~~~~~~~~~~~~~~~~~~~~
      |                     ESP_ERR_WIFI_SSID
/Users/jowallace/Dev/CloudMAV/tools/find-mac/main/main.c:42:25: error: 'EXAMPLE_ESP_WIFI_PASS' undeclared (first use in this function)
   42 |             .password = EXAMPLE_ESP_WIFI_PASS,
      |                         ^~~~~~~~~~~~~~~~~~~~~
/Users/jowallace/Dev/CloudMAV/tools/find-mac/main/main.c:48:35: error: 'ESP_WIFI_SCAN_AUTH_MODE_THRESHOLD' undeclared (first use in this function)
   48 |             .threshold.authmode = ESP_WIFI_SCAN_AUTH_MODE_THRESHOLD,
      |                                   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/jowallace/Dev/CloudMAV/tools/find-mac/main/main.c:49:28: error: 'ESP_WIFI_SAE_MODE' undeclared (first use in this function)
   49 |             .sae_pwe_h2e = ESP_WIFI_SAE_MODE,
      |                            ^~~~~~~~~~~~~~~~~
/Users/jowallace/Dev/CloudMAV/tools/find-mac/main/main.c:50:35: error: 'EXAMPLE_H2E_IDENTIFIER' undeclared (first use in this function)
   50 |             .sae_h2e_identifier = EXAMPLE_H2E_IDENTIFIER,
      |                                   ^~~~~~~~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
